--- a/Group4_FinalProject_MAD3115W2020/Storyboards/Base.lproj/Main.storyboard
+++ b/Group4_FinalProject_MAD3115W2020/Storyboards/Base.lproj/Main.storyboard
@@ -581,7 +581,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="220" id="cC5-tY-DjZ" customClass="VehicleRentTableViewCell" customModule="Group4_FinalProject_MAD3115W2020" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="vehicleRentCell" rowHeight="220" id="cC5-tY-DjZ" customClass="VehicleRentTableViewCell" customModule="Group4_FinalProject_MAD3115W2020" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="414" height="220"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="cC5-tY-DjZ" id="QWg-De-6QP">
