--- a/Group4_FinalProject_MAD3115W2020/Storyboards/Base.lproj/Main.storyboard
+++ b/Group4_FinalProject_MAD3115W2020/Storyboards/Base.lproj/Main.storyboard
@@ -7,7 +7,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Specific Details View Controller-->
+        <!--Person's Details-->
         <scene sceneID="IaX-r5-MVY">
             <objects>
                 <viewController id="wAA-sB-Qbq" customClass="SpecificDetailsViewController" customModule="Group4_FinalProject_MAD3115W2020" customModuleProvider="target" sceneMemberID="viewController">
@@ -103,7 +103,7 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="jIG-nn-UMR"/>
                     </view>
-                    <navigationItem key="navigationItem" id="F7o-R3-rCi"/>
+                    <navigationItem key="navigationItem" title="Person's Details" id="F7o-R3-rCi"/>
                     <connections>
                         <outlet property="iBirthDate" destination="lZO-b9-0GU" id="HVX-y8-VgQ"/>
                         <outlet property="iEmail" destination="SnH-UB-TSh" id="V4G-OK-ryy"/>
@@ -649,7 +649,7 @@
             </objects>
             <point key="canvasLocation" x="1957.9710144927537" y="137.94642857142856"/>
         </scene>
-        <!--Web View Controller-->
+        <!--About Us-->
         <scene sceneID="iqe-dO-2g8">
             <objects>
                 <viewController storyboardIdentifier="webVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="eEx-Nw-hHh" customClass="WebViewController" customModule="Group4_FinalProject_MAD3115W2020" customModuleProvider="target" sceneMemberID="viewController">
@@ -675,7 +675,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="nIN-cS-k7E"/>
                     </view>
-                    <navigationItem key="navigationItem" id="nxZ-tD-AF9"/>
+                    <navigationItem key="navigationItem" title="About Us" id="nxZ-tD-AF9"/>
                     <connections>
                         <outlet property="iWebView" destination="gbC-6d-CcI" id="9ov-uR-h0C"/>
                     </connections>
@@ -1256,7 +1256,7 @@
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <color key="barTintColor" red="0.088881986590000003" green="0.21694519349999999" blue="0.26583433969999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="barTintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <textAttributes key="titleTextAttributes">
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <color key="textShadowColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
